Allow opt-in parallel user jobs
